# linear-regression

./: README.md  pyproject.toml
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
